config/overlays/xks/webhook/manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: odh-model-controller-webhook-service
      namespace: system
      path: /mutate-serving-kserve-io-v1alpha1-llminferenceservice
  failurePolicy: Fail
  name: connection-llmisvc-v1alpha1.odh-model-controller.opendatahub.io
  rules:
  - apiGroups:
    - serving.kserve.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - llminferenceservices
  sideEffects: NoneOnDryRun
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: odh-model-controller-webhook-service
      namespace: system
      path: /mutate-serving-kserve-io-v1alpha2-llminferenceservice
  failurePolicy: Fail
  name: connection-llmisvc-v1alpha2.odh-model-controller.opendatahub.io
  rules:
  - apiGroups:
    - serving.kserve.io
    apiVersions:
    - v1alpha2
    operations:
    - CREATE
    - UPDATE
    resources:
    - llminferenceservices
  sideEffects: NoneOnDryRun
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: odh-model-controller-webhook-service
      namespace: system
      path: /mutate-serving-kserve-io-v1beta1-inferenceservice
  failurePolicy: Fail
  name: minferenceservice-v1beta1.odh-model-controller.opendatahub.io
  rules:
  - apiGroups:
    - serving.kserve.io
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - inferenceservices
  sideEffects: NoneOnDryRun
